# api-server/src/todo/todo.controller.ts
@@ -13,6 +13,7 @@ import {
 } from '@nestjs/common';
 import {
   ApiTags,
+  ApiBearerAuth,
   ApiBadRequestResponse,
   ApiOkResponse,
   ApiUnauthorizedResponse,
@@ -22,10 +23,16 @@ import {
 } from '@nestjs/swagger';
 import { AuthGuard } from '@nestjs/passport';
 import { TodoService } from './todo.service';
+import { TodoEntity } from './entities/todo.entity';
+import {
+  FindTodoResponseDto,
+  FindTodoListResponseDto,
+} from './dto/find-todo.dto';
 import { CreateTodoDto } from './dto/create-todo.dto';
 import { UpdateTodoDto } from './dto/update-todo.dto';
 import { JwtPayload } from '../lib/jwt/interfaces/jwt-payload.interface';
 
+@ApiBearerAuth()
 @ApiTags('todo')
 @Controller('todo')
 export class TodoController {
@@ -34,38 +41,75 @@ export class TodoController {
   @UseGuards(AuthGuard('jwt'))
   @Post()
   @HttpCode(201)
-  create(
+  @ApiCreatedResponse({
+    type: FindTodoResponseDto,
+    description: 'Todo新規作成完了',
+  })
+  async create(
     @Body(ValidationPipe) createTodoDto: CreateTodoDto,
     @Request() req: { user: JwtPayload },
   ) {
-    return this.todoService.create(createTodoDto, req.user.userId);
+    const todo = await this.todoService.create(createTodoDto, req.user.userId);
+    return {
+      todo: todo as TodoEntity,
+    };
   }
 
   @UseGuards(AuthGuard('jwt'))
   @Get()
   @HttpCode(200)
-  findAll(@Request() req: { user: JwtPayload }) {
-    return this.todoService.findAll(req.user.userId);
+  @ApiOkResponse({
+    type: FindTodoListResponseDto,
+    description: 'Todoリスト取得完了',
+  })
+  async findAll(
+    @Request() req: { user: JwtPayload },
+  ): Promise<FindTodoListResponseDto> {
+    const todos = await this.todoService.findAll(req.user.userId);
+    return {
+      todos: todos as Array<TodoEntity>,
+    };
   }
 
   @UseGuards(AuthGuard('jwt'))
   @Get(':id')
   @HttpCode(200)
-  findOne(@Param('id') id: string, @Request() req: { user: JwtPayload }) {
-    return this.todoService.findOne(+id, req.user.userId);
+  @ApiOkResponse({
+    type: FindTodoResponseDto,
+    description: 'Todo取得完了',
+  })
+  async findOne(@Param('id') id: string, @Request() req: { user: JwtPayload }) {
+    const todo = await this.todoService.findOne(+id, req.user.userId);
+    return {
+      todo: todo as TodoEntity,
+    };
   }
 
   @UseGuards(AuthGuard('jwt'))
   @Patch(':id')
   @HttpCode(200)
-  update(@Param('id') id: string, @Body() updateTodoDto: UpdateTodoDto) {
-    return this.todoService.update(+id, updateTodoDto);
+  @ApiOkResponse({
+    type: FindTodoResponseDto,
+    description: 'Todo更新完了',
+  })
+  async update(@Param('id') id: string, @Body() updateTodoDto: UpdateTodoDto) {
+    const todo = await this.todoService.update(+id, updateTodoDto);
+    return {
+      todo: todo as TodoEntity,
+    };
   }
 
   @UseGuards(AuthGuard('jwt'))
   @Delete(':id')
   @HttpCode(201)
-  remove(@Param('id') id: string) {
-    return this.todoService.remove(+id);
+  @ApiOkResponse({
+    type: FindTodoResponseDto,
+    description: 'Todo削除完了',
+  })
+  async remove(@Param('id') id: string) {
+    const todo = await this.todoService.remove(+id);
+    return {
+      todo: todo as TodoEntity,
+    };
   }
 }
